Fix OCI metrics export after metric scope removal